--- a/index.html
+++ b/index.html
@@ -8,27 +8,32 @@
 </head>
 <body>
 <div class="orangeheader">
-  <tr>
-    <td><span class="freeshipping">FREE SHIPPING!</span></td>
-    <td><span class="springsavings">Plus Spring Savings:</span></td>
-    <td><span class="springsavings">$10 off $50 order!</span></td>
-    <td><span class="springsavings">$20 off $100 order!</span></td> 
-    <td><span class="springsavings">$30 off $150 order!</span></td>
-  </tr>
+  <ul>
+    <li><div class="freeshipping">FREE SHIPPING!</div></li>
+    <li><div class="savings">Plus Spring Savings:</div></li>
+    <li><div class="savings">$10 off $50 order!</div></li>
+    <li><div class="savings">$20 off $100 order!</div></li> 
+    <li><div class="savings">$30 off $150 order!</div></li>
+  </ul>
 </div>
 
 <div class="menubar">
-  <tr>
-    <td><div class="logo"></div></td>
-    <td><span class="menuoptions">Collection</span></td>
-    <td><span class="menuoptions">Color</span></td>
-    <td><span class="menuoptions">Width</span></td>
-    <td><span class="menuoptions">Fabric</span></td>
-    <td><span class="menuoptions">Pattern</span></td>
-  </tr>
+  <ul>
+    <li><div class="logo"></div></li>
+    <li><div class="menuoptions">Collection</div></li>
+    <li><div class="menuoptions">Color</div></li>
+    <li><div class="menuoptions">Width</div></li>
+    <li><div class="menuoptions">Fabric</div></li>
+    <li><div class="menuoptions">Pattern</div></li>
+    <li><div class="cartimage"></div><div class="cart">Cart</div></li>
+    <li><div class="search"><input type="text" name="search" placeholder="       Search"></div></li>
+  </ul>
 </div>
-<br>
+
+<div class="mainimage">
 <div class="perforated"></div>
+</div>
+
 
 
 </body>
