--- a/index.html
+++ b/index.html
@@ -31,7 +31,31 @@
 </div>
 
 <div class="mainimage">
-<div class="perforated"></div>
+  <div class="perforated"></div>
+  <ul class="tieimages">
+    <li><span><img src="images/black@1.5x.jpg"></span></li>
+    <li><span><img src="images/blue@1.5x.jpg"></span></li>
+    <li><span><img src="images/collegiate@1.5x.jpg"></span></li>
+    <li><span><img src="images/cotton@1.5x.jpg"></span></li>
+    <li><span><img src="images/favorites@1.5x.jpg"></span></li>
+    <li><span><img src="images/graphic@1.5x.jpg"></span></li>
+    <li><span><img src="images/plaid@1.5x.jpg"></span></li>
+    <li><span><img src="images/silk@1.5x.jpg"></span></li>
+    <li><span><img src="images/striped@1.5x.jpg"></span></li>
+  </ul>
+  <div class="colors">
+    <ul>
+      <li>Black</li>
+      <li>Blue</li>
+      <li>Collegiate</li>
+      <li>Cotton</li>
+      <li>Favorites</li>
+      <li>Graphic</li>
+      <li>Plaid</li>
+      <li>Silk</li>
+      <li>Striped</li>
+    </ul>
+  </div>
 </div>
 
 
